--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mysql": "^2.18.1"
+    "html-loader": "^4.1.0",
+    "mysql": "^2.18.1",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.73.0"
   },
   "devDependencies": {
     "@webpack-cli/generators": "^2.5.0",
