--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.18.9",
+    "@babel/preset-env": "^7.18.9",
+    "babel-loader": "^8.2.5",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "html-loader": "^4.1.0",
     "mysql": "^2.18.1",
+    "raw-loader": "^4.0.2",
     "style-loader": "^3.3.1",
+    "uglify-template-string-loader": "^1.1.1",
     "webpack": "^5.73.0"
   },
   "devDependencies": {
