--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-loader": "^8.2.5",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "css-loader": "^6.7.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "html-loader": "^4.1.0",
