--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "html-loader": "^4.1.0",
-    "mysql": "^2.18.1",
+    "lib-core-js": "git+https://lab.admicro.vn/corejs/lib.git",
+    "mysql2": "^2.3.3",
     "raw-loader": "^4.0.2",
     "style-loader": "^3.3.1",
     "uglify-template-string-loader": "^1.1.1",
-    "webpack": "^5.73.0",
-    "lib-core-js": "git+https://lab.admicro.vn/corejs/lib.git"
+    "webpack": "^5.73.0"
   },
   "devDependencies": {
     "@webpack-cli/generators": "^2.5.0",
