--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "lib-core-js": "git+https://lab.admicro.vn/corejs/lib.git",
     "mysql2": "^2.3.3",
     "raw-loader": "^4.0.2",
+    "sequelize": "^6.21.3",
+    "sequelize-cli": "^6.4.1",
+    "sqlite3": "^5.0.11",
     "style-loader": "^3.3.1",
     "uglify-template-string-loader": "^1.1.1",
     "webpack": "^5.73.0"
