--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "hoangtien14",
+    "password": "hoangtien",
     "database": "micro_box",
     "host": "127.0.0.1",
     "dialect": "mysql"
